...
        android:layout_marginTop="172dp"
        android:layout_marginBottom="19dp"
        android:text="Enter New Username"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EditTextUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUserChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginBottom="225dp"
        android:text="Change Username"
        app:layout_constraintBottom_toBottomOf="parent"
...
